src/github.com/ebay/beam/query/parser/testdata/ask/errors/ask_limit.res
Query:
ASK 
WHERE {
	?rims <color> "white"
}
LIMIT 2

Parsed:
Error: unable to parse query: line 5 column 1: unparsed text: 'LIMIT 2'
